[gd_scene load_steps=8 format=2]

[ext_resource path="res://spacetomblogo.png" type="Texture" id=1]
[ext_resource path="res://play.png" type="Texture" id=2]
[ext_resource path="res://playhover.png" type="Texture" id=3]
[ext_resource path="res://mainMenu.gd" type="Script" id=4]
[ext_resource path="res://quit.png" type="Texture" id=5]
[ext_resource path="res://quithover.png" type="Texture" id=6]
[ext_resource path="res://license.png" type="Texture" id=7]

[node name="Node2D" type="Node2D"]
script = ExtResource( 4 )

[node name="Logo" type="TextureRect" parent="."]
margin_left = 273.0
margin_top = -1.0
margin_right = 1273.0
margin_bottom = 799.0
rect_scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 1 )

[node name="MenuChoices" type="VBoxContainer" parent="."]
margin_left = 65.0
margin_top = 63.0
margin_right = 165.0
margin_bottom = 570.0
custom_constants/separation = 19

[node name="PlayButton" type="TextureButton" parent="MenuChoices"]
margin_right = 100.0
margin_bottom = 40.0
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 3 )

[node name="QuitButton" type="TextureButton" parent="MenuChoices"]
margin_top = 59.0
margin_right = 100.0
margin_bottom = 99.0
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 6 )

[node name="LiscenseButton" type="TextureButton" parent="."]
margin_left = 9.0
margin_top = 556.0
margin_right = 209.0
margin_bottom = 596.0
texture_normal = ExtResource( 7 )

[connection signal="pressed" from="MenuChoices/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="MenuChoices/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="LiscenseButton" to="." method="_on_LiscenseButton_pressed"]
